--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         arr = [0.8,4,-0.17,2,0.9,1];
         let max = 0;
-        arr.array.forEach(element => {
+        arr.forEach(element => {
             if (element>max)
             max = element;
         });
